--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,7 @@ html {
   overflow-x: hidden;
 }
 
+
 #home,
 #about-me,
 #tech-skills,
@@ -190,7 +191,7 @@ header nav {
 .contact-form,
 .certificate-card {
   background: rgba(20, 19, 26, 0.8);
-  padding: 2rem;
+  /* padding: 2rem; */
   border-radius: 15px;
   border: 1px solid rgba(80, 200, 120, 0.1);
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
@@ -769,8 +770,8 @@ h2 {
 
 /* Projects section */
 #projects {
-  padding: 80px 20px;
-  background: linear-gradient(180deg, #121212 0%, #1a1a1a 100%);
+  /* padding: 80px 20px; */
+  /* background: linear-gradient(180deg, #121212 0%, #1a1a1a 100%); */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -780,12 +781,11 @@ h2 {
 .projects-header {
   width: 100%;
   text-align: center;
-  margin-bottom: 40px;
-  position: sticky;
-  top: var(--header-height);
-  padding: 20px 0;
+  margin-bottom: 20px;
+  position: relative;
+  top: 5vh;
+  /* padding: 20px 0; */
   background: inherit;
-  z-index: 10;
 }
 
 .project-filter {
@@ -1017,15 +1017,15 @@ h2 {
 }
 
 .scroll-left {
-  left: -10px;
+  left: 25px;
 }
 .scroll-right {
-  right: -10px;
+  right: 20px;
 }
 
 .projects-header h2 {
   font-size: 3em;
-  margin-bottom: 15px;
+  /* margin-bottom: 15px; */
   background: linear-gradient(45deg, #50c878, #61dafb);
   -webkit-background-clip: text;
   background-clip: text;
@@ -1036,7 +1036,7 @@ h2 {
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin: 40px 0;
+  /* margin: 40px 0; */
 }
 
 .filter-btn {
@@ -1067,7 +1067,7 @@ h2 {
 .projects-grid {
   display: flex;
   gap: 30px;
-  max-width: 100%;
+  max-width: 90%;
   margin: 0 auto;
   padding: 20px;
   overflow-x: auto;
@@ -1082,7 +1082,7 @@ h2 {
 }
 
 .project-card {
-  min-width: 350px;
+  min-width: 500px;
   background: rgba(20, 19, 26, 0.8);
   border-radius: 20px;
   overflow: hidden;
@@ -2714,16 +2714,11 @@ h2 {
   }
 }
 
-/* Projects Section Styling */
-#projects {
-  padding: 80px 20px;
-  background: linear-gradient(180deg, #121212 0%, #1a1a1a 100%);
-  min-height: 100vh;
-}
+
 
 .projects-header {
   text-align: center;
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
 }
 
 .projects-header h2 {
