--- a/css/index.css
+++ b/css/index.css
@@ -953,7 +953,7 @@
     color: #f1f1f1;
     font-family: Arial, sans-serif;
     text-align: center;
-    height: 75vh;
+    height: 90vh;
     position: relative;
   }
 
@@ -2020,7 +2020,7 @@
   /* Certificates Section */
   #certificates {
     padding: 80px 20px;
-    background: linear-gradient(180deg,#121212  0%, #1a1a1a 100%);
+    background: #121212;
     min-height: 100vh;
   }
 
